test/data/fail/misc/eval_arguments.js
'use strict'; eval = 0; //<>
'use strict'; arguments = 0; //<>
'use strict'; eval *= 0; //<>
'use strict'; arguments *= 0; //<>
'use strict'; ++eval; //<>
'use strict'; ++arguments; //<>
'use strict'; eval++; //<>
'use strict'; arguments++; //<>
'use strict'; !{eval = 0}; //<>
'use strict'; !{arguments = 0}; //<>
'use strict'; [eval] = []; //<>
'use strict'; [arguments] = []; //<>
'use strict'; [...eval] = []; //<>
'use strict'; [...arguments] = []; //<>
'use strict'; ({eval} = {}); //<>
'use strict'; ({arguments} = {}); //<>
'use strict'; ({eval = 0} = {}); //<>
'use strict'; ({arguments = 0} = {}); //<>
'use strict'; ({...eval} = {}); //<>
'use strict'; ({...arguments} = {}); //<>
'use strict'; var eval; //<>
'use strict'; let eval; //<>
'use strict'; const eval = 0; //<>
'use strict'; var arguments; //<>
'use strict'; let arguments; //<>
'use strict'; const arguments = 0; //<>
'use strict'; var [eval] = []; //<>
'use strict'; let [eval] = []; //<>
'use strict'; const [eval] = []; //<>
'use strict'; var [arguments] = []; //<>
'use strict'; let [arguments] = []; //<>
'use strict'; const [arguments] = []; //<>
'use strict'; function eval() {} //<>
'use strict'; function arguments() {} //<>
'use strict'; function a(eval) {} //<>
'use strict'; function a(arguments) {} //<>
'use strict'; !function eval() {} //<>
'use strict'; !function arguments() {} //<>
'use strict'; !function a(eval) {} //<>
'use strict'; !function a(arguments) {} //<>
class eval {} //<>
class arguments {} //<>
